manifests/ui/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cloudide-ui-ns
  labels:
    istio-injection: enabled
